# fisher-rao

./: .gitignore  AGENT.md  Cargo.toml  README.md
memory/: JOURNAL.md
src/: bound.rs  efficiency.rs  estimation.rs  information.rs  lib.rs  metric.rs  rao_distance.rs  types.rs
